VB/Lib/xcgui.bas

Declare Sub XLayout_RemoveChild Lib "xcgui.dll" (ByVal hLayout As Long, ByVal hChild As Long)
Declare Sub XLayout_AdjustLayout Lib "xcgui.dll" (ByVal hLayout As Long)
Declare Sub XLayout_SetRectFrame Lib "xcgui.dll" (ByVal hLayout As Long, ByVal pRect As rect)
Declare Sub XLayout_GetRect Lib "xcgui.dll" (ByVal hLayout As Long, ByVal pRect As rect)
Declare Sub XLayout_GetRectFrame Lib "xcgui.dll" (ByVal hLayout As Long, ByVal pRect As rect)
Declare Function XLayout_GetWindow Lib "xcgui.dll" (ByVal hLayout As Long) As Long
Declare Function XLayout_GetEle Lib "xcgui.dll" (ByVal hLayout As Long) As Long
Declare Function XLayout_GetParentLayout Lib "xcgui.dll" (ByVal hLayout As Long) As Long
Declare Sub XLayout_SetID Lib "xcgui.dll" (ByVal hLayout As Long, ByVal nID As Long)
Declare Sub XLayout_SetHorizon Lib "xcgui.dll" (ByVal hLayout As Long, ByVal bHorizon As Boolean)
Declare Sub XLayout_SetAlignH Lib "xcgui.dll" (ByVal hLayout As Long, ByVal nFlag As Long)
Declare Sub XLayout_SetAlignV Lib "xcgui.dll" (ByVal hLayout As Long, ByVal nFlag As Long)
Declare Sub XLayout_SetPadding Lib "xcgui.dll" (ByVal hLayout As Long, ByVal left As Long, ByVal top As Long, ByVal right As Long, ByVal bottom As Long)
Declare Sub XLayout_SetSpace Lib "xcgui.dll" (ByVal hLayout As Long, ByVal nSpace As Long)
Declare Sub XLayout_SetLayoutWidth Lib "xcgui.dll" (ByVal hLayout As Long, ByVal nFlag As Long, ByVal nWidth As Long)
Declare Sub XLayout_SetLayoutHeight Lib "xcgui.dll" (ByVal hLayout As Long, ByVal nFlag As Long, ByVal nHeight As Long)
Declare Sub XLayout_GetLayoutWidth Lib "xcgui.dll" (ByVal hLayout As Long, ByVal pFlag As Long, ByVal pWidth As Long)
Declare Sub XLayout_GetLayoutHeight Lib "xcgui.dll" (ByVal hLayout As Long, ByVal pFlag As Long, ByVal pHeight As Long)
Declare Function XLayout_GetWidth Lib "xcgui.dll" (ByVal hLayout As Long) As Long
Declare Function XLayout_GetHeight Lib "xcgui.dll" (ByVal hLayout As Long) As Long
Declare Function XLayout_GetWidthIn Lib "xcgui.dll" (ByVal hLayout As Long) As Long
Declare Function XLayout_GetHeightIn Lib "xcgui.dll" (ByVal hLayout As Long) As Long
Declare Sub XLayout_GetContentSize Lib "xcgui.dll" (ByVal hLayout As Long, ByVal pSize As size)
Declare Sub XLayout_ShowLayout Lib "xcgui.dll" (ByVal hLayout As Long, ByVal bShow As Boolean)
Declare Function XLayout_GetChildCount Lib "xcgui.dll" (ByVal hLayout As Long) As Long
Declare Function XLayout_GetChildType Lib "xcgui.dll" (ByVal hLayout As Long, ByVal index As Long) As Long
Declare Function XLayout_GetChild Lib "xcgui.dll" (ByVal hLayout As Long, ByVal index As Long) As Long
Declare Function XListBox_Create Lib "xcgui.dll" (ByVal x As Long, ByVal y As Long, ByVal cx As Long, ByVal cy As Long, ByVal hParent As Long) As Long
Declare Sub XListBox_SetStyle Lib "xcgui.dll" (ByVal hEle As Long, ByVal style As Long)
Declare Function XListBox_SetItemData Lib "xcgui.dll" (ByVal hEle As Long, ByVal iItem As Long, ByVal nUserData As Long) As Boolean
Declare Function XListBox_GetItemData Lib "xcgui.dll" (ByVal hEle As Long, ByVal iItem As Long) As Long
Declare Function XListBox_SetItemInfo Lib "xcgui.dll" (ByVal hEle As Long, ByVal iItem As Long, ByVal pItem As listBox_item_Info_i) As Boolean
Declare Function XListBox_GetItemInfo Lib "xcgui.dll" (ByVal hEle As Long, ByVal iItem As Long, ByVal pItem As listBox_item_Info_i) As Boolean
Declare Sub XListBox_SetItemColor Lib "xcgui.dll" (ByVal hEle As Long, ByVal color As Long, ByVal alpha As Byte)
Declare Function XListBox_GetItemColor Lib "xcgui.dll" (ByVal hEle As Long) As Long
Declare Sub XListBox_SetItemColorSel Lib "xcgui.dll" (ByVal hEle As Long, ByVal color As Long, ByVal alpha As Byte)
Declare Function XListBox_GetItemColorSel Lib "xcgui.dll" (ByVal hEle As Long) As Long
Declare Sub XListBox_SetItemColorStay Lib "xcgui.dll" (ByVal hEle As Long, ByVal color As Long, ByVal alpha As Byte)
Declare Function XListBox_GetItemColorStay Lib "xcgui.dll" (ByVal hEle As Long) As Long
Declare Function XListBox_SetSelectItem Lib "xcgui.dll" (ByVal hEle As Long, ByVal iItem As Long) As Boolean
Declare Function XListBox_GetSelectItem Lib "xcgui.dll" (ByVal hEle As Long) As Long
Declare Function XListBox_CancelSelectItem Lib "xcgui.dll" (ByVal hEle As Long, ByVal iItem As Long) As Boolean
Declare Function XListBox_CancelSelectAll Lib "xcgui.dll" (ByVal hEle As Long) As Boolean
Declare Function XListBox_GetSelectAll Lib "xcgui.dll" (ByVal hEle As Long, ByVal pArray As Long, ByVal nArraySize As Long) As Long
Declare Function XListBox_GetSelectCount Lib "xcgui.dll" (ByVal hEle As Long) As Long
Declare Function XListBox_GetItemMouseStay Lib "xcgui.dll" (ByVal hEle As Long) As Long
Declare Function XListBox_SelectAll Lib "xcgui.dll" (ByVal hEle As Long) As Boolean
Declare Sub XListBox_SetItemHeightDefault Lib "xcgui.dll" (ByVal hEle As Long, ByVal nHeight As Long, ByVal nSelHeight As Long)
Declare Sub XListBox_GetItemHeightDefault Lib "xcgui.dll" (ByVal hEle As Long, ByVal pHeight As Long, ByVal pSelHeight As Long)
Declare Function XListBox_HitTest Lib "xcgui.dll" (ByVal hEle As Long, ByVal pPt As Point) As Long
Declare Function XListBox_HitTestOffset Lib "xcgui.dll" (ByVal hEle As Long, ByVal pPt As Point) As Long
Declare Function XListBox_SetItemTemplateXML Lib "xcgui.dll" (ByVal hEle As Long, ByVal pXmlFile As String) As Boolean
Declare Function XListBox_GetTemplateObject Lib "xcgui.dll" (ByVal hEle As Long, ByVal iItem As Long, ByVal nTempItemID As Long) As Long
Declare Sub XListBox_EnableMultiSel Lib "xcgui.dll" (ByVal hEle As Long, ByVal bEnable As Boolean)
Declare Sub XListBox_BindAdapter Lib "xcgui.dll" (ByVal hEle As Long, ByVal hAdapter As Long)
Declare Function XListBox_GetAdapter Lib "xcgui.dll" (ByVal hEle As Long) As Long
Declare Function XList_Create Lib "xcgui.dll" (ByVal x As Long, ByVal y As Long, ByVal cx As Long, ByVal cy As Long, ByVal hParent As Long) As Long
Declare Function XList_AddColumn Lib "xcgui.dll" (ByVal hEle As Long, ByVal width As Long) As Long
Declare Function XList_InsertColumn Lib "xcgui.dll" (ByVal hEle As Long, ByVal width As Long, ByVal iItem As Long) As Long
Declare Sub XList_SetStyle Lib "xcgui.dll" (ByVal hEle As Long, ByVal style As Long)
Declare Sub XList_SetColumnWidth Lib "xcgui.dll" (ByVal hEle As Long, ByVal iItem As Long, ByVal width As Long)
Declare Sub XList_SetColumnMinWidth Lib "xcgui.dll" (ByVal hEle As Long, ByVal iItem As Long, ByVal width As Long)
Declare Function XList_DeleteColumn Lib "xcgui.dll" (ByVal hEle As Long, ByVal iItem As Long) As Boolean
Declare Sub XList_DeleteColumnAll Lib "xcgui.dll" (ByVal hEle As Long)
Declare Function XList_SetItemData Lib "xcgui.dll" (ByVal hEle As Long, ByVal iItem As Long, ByVal iSubItem As Long, ByVal data As Long) As Boolean
Declare Function XList_GetItemData Lib "xcgui.dll" (ByVal hEle As Long, ByVal iItem As Long, ByVal iSubItem As Long) As Long
Declare Function XList_SetSelectItem Lib "xcgui.dll" (ByVal hEle As Long, ByVal iItem As Long) As Boolean
Declare Function XList_GetSelectItem Lib "xcgui.dll" (ByVal hEle As Long) As Long
Declare Function XList_GetSelectAll Lib "xcgui.dll" (ByVal hEle As Long, ByVal pArray As Long, ByVal nArraySize As Long) As Long
Declare Function XList_GetHeaderHELE Lib "xcgui.dll" (ByVal hEle As Long) As Long
Declare Sub XList_BindAdapter Lib "xcgui.dll" (ByVal hEle As Long, ByVal hAdapter As Long)
Declare Sub XList_BindAdapterHeader Lib "xcgui.dll" (ByVal hEle As Long, ByVal hAdapter As Long)
Declare Function XList_GetAdapter Lib "xcgui.dll" (ByVal hEle As Long) As Long
Declare Function XList_SetItemTemplateXML Lib "xcgui.dll" (ByVal hEle As Long, ByVal pXmlFile As String) As Boolean
Declare Function XList_GetTemplateObject Lib "xcgui.dll" (ByVal hEle As Long, ByVal iItem As Long, ByVal nTempItemID As Long) As Long
Declare Sub XList_SetHeaderHeight Lib "xcgui.dll" (ByVal hEle As Long, ByVal height As Long)
Declare Function XList_GetHeaderHeight Lib "xcgui.dll" (ByVal hEle As Long) As Long
Declare Sub XList_SetItemColor Lib "xcgui.dll" (ByVal hEle As Long, ByVal color As Long, ByVal alpha As Byte)
Declare Sub XList_SetItemColorSel Lib "xcgui.dll" (ByVal hEle As Long, ByVal color As Long, ByVal alpha As Byte)
Declare Sub XList_SetItemColorStay Lib "xcgui.dll" (ByVal hEle As Long, ByVal color As Long, ByVal alpha As Byte)
Declare Function XList_GetItemColor Lib "xcgui.dll" (ByVal hEle As Long) As Long
Declare Function XList_GetItemColorSel Lib "xcgui.dll" (ByVal hEle As Long) As Long
Declare Function XList_GetItemColorStay Lib "xcgui.dll" (ByVal hEle As Long) As Long
Declare Sub XList_SetItemHeightDefault Lib "xcgui.dll" (ByVal hEle As Long, ByVal nHeight As Long, ByVal nSelHeight As Long)
Declare Sub XList_GetItemHeightDefault Lib "xcgui.dll" (ByVal hEle As Long, ByVal pHeight As Long, ByVal pSelHeight As Long)
Declare Function XList_HitTest Lib "xcgui.dll" (ByVal hEle As Long, ByVal pPt As Point, ByVal piItem As Long, ByVal piSubItem As Long) As Boolean
Declare Function XList_HitTestOffset Lib "xcgui.dll" (ByVal hEle As Long, ByVal pPt As Point, ByVal piItem As Long, ByVal piSubItem As Long) As Boolean
Declare Sub XList_RefreshData Lib "xcgui.dll" (ByVal hEle As Long)
Declare Function XListView_Create Lib "xcgui.dll" (ByVal x As Long, ByVal y As Long, ByVal cx As Long, ByVal cy As Long, ByVal hParent As Long) As Long
Declare Sub XListView_BindAdapter Lib "xcgui.dll" (ByVal hEle As Long, ByVal hAdapter As Long)
Declare Function XListView_GetAdapter Lib "xcgui.dll" (ByVal hEle As Long) As Long
Declare Function XListView_SetItemTemplateXML Lib "xcgui.dll" (ByVal hEle As Long, ByVal pXmlFile As String) As Boolean
Declare Function XListView_GetTemplateObject Lib "xcgui.dll" (ByVal hEle As Long, ByVal iGroup As Long, ByVal iItem As Long, ByVal nTempItemID As Long) As Long
Declare Function XListView_GetTemplateObjectGroup Lib "xcgui.dll" (ByVal hEle As Long, ByVal iGroup As Long, ByVal nTempItemID As Long) As Long
Declare Function XListView_HitTest Lib "xcgui.dll" (ByVal hEle As Long, ByVal pPt As Point, ByVal pOutGroup As Long, ByVal pOutItem As Long) As Boolean
Declare Function XListView_HitTestOffset Lib "xcgui.dll" (ByVal hEle As Long, ByVal pPt As Point, ByVal pOutGroup As Long, ByVal pOutItem As Long) As Long
Declare Function XListView_SetSelectItem Lib "xcgui.dll" (ByVal hEle As Long, ByVal iGroup As Long, ByVal iItem As Long) As Boolean
Declare Function XListView_GetSelectItem Lib "xcgui.dll" (ByVal hEle As Long, ByVal piGroup As Long, ByVal piItem As Long) As Boolean
Declare Sub XListView_SetColumnSpace Lib "xcgui.dll" (ByVal hEle As Long, ByVal space As Long)
Declare Sub XListView_SetRowSpace Lib "xcgui.dll" (ByVal hEle As Long, ByVal space As Long)
Declare Sub XListView_SetAlignSizeLeft Lib "xcgui.dll" (ByVal hEle As Long, ByVal size As Long)
Declare Sub XListView_SetAlignSizeTop Lib "xcgui.dll" (ByVal hEle As Long, ByVal size As Long)
Declare Sub XListView_SetItemSize Lib "xcgui.dll" (ByVal hEle As Long, ByVal width As Long, ByVal height As Long)
Declare Sub XListView_GetItemSize Lib "xcgui.dll" (ByVal hEle As Long, ByVal pSize As size)
Declare Sub XListView_SetGroupHeight Lib "xcgui.dll" (ByVal hEle As Long, ByVal height As Long)
Declare Function XListView_GetGroupHeight Lib "xcgui.dll" (ByVal hEle As Long) As Long
Declare Sub XListView_SetItemColorSel Lib "xcgui.dll" (ByVal hEle As Long, ByVal color As Long, ByVal alpha As Byte)
Declare Sub XListView_SetItemBorderColorSel Lib "xcgui.dll" (ByVal hEle As Long, ByVal color As Long, ByVal alpha As Byte)
Declare Sub XListView_SetItemColorStay Lib "xcgui.dll" (ByVal hEle As Long, ByVal color As Long, ByVal alpha As Byte)
Declare Sub XListView_SetItemBorderColorStay Lib "xcgui.dll" (ByVal hEle As Long, ByVal color As Long, ByVal alpha As Byte)
Declare Sub XListView_SetItemColorLeave Lib "xcgui.dll" (ByVal hEle As Long, ByVal color As Long, ByVal alpha As Byte)
Declare Sub XListView_SetItemBorderColorLeave Lib "xcgui.dll" (ByVal hEle As Long, ByVal color As Long, ByVal alpha As Byte)
